--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.23.1
-joblib==1.3.2
-numpy==1.21.6
-pandas>=1.3.0
-scikit-learn
+streamlit==1.30.0
+joblib==1.2.0
+numpy==1.24.3
+pandas==2.1.4
+scikit-learn==1.3.2
